# fintune_lowmem

./: .gitignore  MODEL_EXPORT_README.md  gpu_test.py  hello.py  install_export_deps.sh  model_exporter.py  pyproject.toml  qwen3_finetuning_example.py  qwen3_finetuning_oom_protection_summary.md  qwen3_finetuning_optimization_summary.md  test_llm_dependencies.py  test_qwen_finetuning.py
data/raw/: 39786qa.md  README.md  gbt37092_qa.md  qA.md
